rename namespace to reflect more general purpose

--- a/Postal.Tests/Recognizers.Tests.csproj
+++ b/Postal.Tests/Recognizers.Tests.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Postal.NET\Postal.NET.csproj" />
+    <ProjectReference Include="..\Postal.NET\Recognizers.NET.csproj" />
   </ItemGroup>
 
 </Project>
