--- a/Postal.NET/Recognizers.NET.csproj
+++ b/Postal.NET/Recognizers.NET.csproj
@@ -2,11 +2,10 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
-    <RootNamespace>Postal</RootNamespace>
+    <RootNamespace>Recognizers</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Recognizer - Copy.cs" />
   </ItemGroup>
 
 </Project>
