--- a/Recognizers.Tests/Recognizers.Tests.csproj
+++ b/Recognizers.Tests/Recognizers.Tests.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Postal.NET\Recognizers.NET.csproj" />
+    <ProjectReference Include="..\Recognizers.NET\Recognizers.NET.csproj" />
   </ItemGroup>
 
 </Project>
