--- a/Recognizers.Tests/Recognizers.Tests.csproj
+++ b/Recognizers.Tests/Recognizers.Tests.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Recognizers.NET\Recognizers.NET.csproj" />
+    <ProjectReference Include="..\Recognizers.Xml\Recognizers.Xml.csproj" />
   </ItemGroup>
 
 </Project>
