--- a/Recognizers.NET/Recognizers.NET.csproj
+++ b/Recognizers.NET/Recognizers.NET.csproj
@@ -9,4 +9,23 @@
     <PackageReference Include="System.Memory" Version="4.5.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="RecognizerExtensions.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>RecognizerExtensions.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="RecognizerExtensions.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>RecognizerExtensions.tt</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
 </Project>
